docs: add deep-dive documentation and question bank for Java virtual threads